# twitch-sankagata-manager

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  index.html  overlay.html  package.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
docs/superpowers/plans/: 2026-04-24-sankagata-manager.md
docs/superpowers/specs/: 2026-04-24-sankagata-manager-design.md
locales/: en.json  ja.json  ko.json
overlay/: overlay.css  overlay.html  overlay.js
site/: README.md  app.js  build.mjs  i18n.mjs  index.html  styles.css
src/: App.tsx  disableContextMenu.ts  i18n.ts  ipc.ts  main.tsx  overlay-entry.tsx  store.ts  styles.css  test-setup.ts  theme-utils.ts  themes.css  types.ts  update.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  config.rs  error.rs  eventsub.rs  filter.rs  helix.rs  ipc.rs  lib.rs  main.rs  model.rs  overlay_assets.rs  pipeline.rs  priority.rs  server.rs  state.rs  store.rs
src-tauri/tests/: auth_test.rs  capabilities_test.rs  config_test.rs  event_broadcast_test.rs  eventsub_test.rs  filter_test.rs  helix_test.rs  pipeline_test.rs  priority_test.rs  server_test.rs  state_test.rs  store_test.rs
src/__tests__/: store.sync.test.tsx  update.test.ts
src/components/: AuthPrompt.tsx  ConfirmModal.tsx  DebugPanel.tsx  Header.tsx  PlayingPane.tsx  Row.tsx  SettingsModal.tsx  ThemeModal.tsx  UpdateModal.tsx  WaitingPane.tsx  icons.tsx
src/components/__tests__/: Header.drag.test.tsx  Row.delete.test.tsx  Row.test.tsx  SettingsModal.test.tsx  ThemeModal.test.tsx  WaitingPane.trash.test.tsx
src/hooks/: useDragDrop.ts
